# soft_nms

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  func.py  requirements-dev.txt  run.sh  run_cmake.sh  run_code_checker.sh  run_cpp_tests.sh  run_flake.sh  setup.cfg  setup.py  soft_nms.cpp  test_soft_nms.py
.github/workflows/: master.yml
pt_soft_nms/: __init__.py  fake_soft_nms.py  soft_nms.py
pt_soft_nms/csrc/: CMakeLists.txt  op.cpp  soft_nms.cpp  soft_nms.h
scripts/: ci_checks.sh  run_cpp_tests.sh  run_format.sh
tests/: test_jit_exports.py  test_soft_nms.py  test_torch_compile.py  test_torch_exports.py
tests/cpp/: CMakeLists.txt  tests.cpp
ts_ops/: __init__.py  soft_nms.py
ts_ops/csrc/: ops.cpp  soft_nms.cpp
ts_ops/csrc/soft_nms/: soft_nms.cpp  soft_nms.h
